examples/valid/44_higher_kinded_generic_forwarding.lane
module Examples.Valid44

import Basic.Io.{ println }
import Basic.Ops.*

struct Box[A] {
  value : A
}

fn[F : [Type] -> Type] consume_int(_value : F[Int]) -> Int {
  42
}

fn[F : [Type] -> Type] forward(value : F[Int]) -> Int {
  consume_int(value)
}

fn run_box(value : Box[Int]) -> Int {
  forward(value)
}

let forwarded : Int = run_box(Box::{ value: 1 })

pub fn answer() -> Unit ! Io {
  if forwarded == 42 {
    println("42")
  } else {
    println("bad:42")
  }
}
